--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 *.md filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.py filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 *.pt filter=lfs diff=lfs merge=lfs -text
