--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,5 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.yaml filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
