updated linux yml for lap, renamed session2 and fixed path in Task1Car

--- a/session-3/linux-env.yml
+++ b/session-3/linux-env.yml
@@ -60,6 +60,7 @@ dependencies:
       - jinja2==3.1.6
       - keras==2.15.0
       - kiwisolver==1.4.9
+      - lap==0.5.12
       - libclang==18.1.1
       - markdown==3.10
       - markupsafe==3.0.3
