--- a/linux-env.yml
+++ b/linux-env.yml
@@ -13,7 +13,6 @@ dependencies:
   - libgcc=15.2.0=h69a1729_7
   - libgcc-ng=15.2.0=h166f726_7
   - libgomp=15.2.0=h4751f2c_7
-  - libnsl=2.0.0=h5eee18b_0
   - libstdcxx=15.2.0=h39759b7_7
   - libstdcxx-ng=15.2.0=hc03a8fd_7
   - libuuid=1.41.5=h5eee18b_0
@@ -23,7 +22,7 @@ dependencies:
   - openssl=3.0.18=hd6dcaed_0
   - pip=25.3=pyhc872135_0
   - pthread-stubs=0.3=h0ce48e5_1
-  - python=3.11.14=h6fa692b_0
+  - python=3.11.13=h1a3bd86_0
   - readline=8.3=hc2a1206_0
   - setuptools=80.9.0=py311h06a4308_0
   - sqlite=3.51.1=he0a8d7e_0
@@ -39,20 +38,17 @@ dependencies:
   - pip:
       - absl-py==2.3.1
       - astunparse==1.6.3
-      - cachetools==6.2.4
       - certifi==2026.1.4
       - charset-normalizer==3.4.4
-      - clip==1.0
       - contourpy==1.3.3
       - cycler==0.12.1
       - filelock==3.20.3
       - flatbuffers==25.12.19
       - fonttools==4.61.1
       - fsspec==2026.1.0
-      - ftfy==6.3.1
       - gast==0.7.0
-      - google-auth==2.41.1
-      - google-auth-oauthlib==1.2.3
+      - google-auth==2.47.0
+      - google-auth-oauthlib==1.2.4
       - google-pasta==0.2.0
       - grpcio==1.76.0
       - h5py==3.15.1
@@ -93,12 +89,11 @@ dependencies:
       - polars-runtime-32==1.37.1
       - protobuf==4.25.8
       - psutil==7.2.1
-      - pyasn1==0.6.1
+      - pyasn1==0.6.2
       - pyasn1-modules==0.4.2
       - pyparsing==3.3.1
       - python-dateutil==2.9.0.post0
       - pyyaml==6.0.3
-      - regex==2025.11.3
       - requests==2.32.5
       - requests-oauthlib==2.0.0
       - rsa==4.9.1
@@ -113,13 +108,11 @@ dependencies:
       - termcolor==3.3.0
       - torch==2.9.1
       - torchvision==0.24.1
-      - tqdm==4.67.1
       - triton==3.5.1
       - typing-extensions==4.15.0
       - ultralytics==8.3.252
       - ultralytics-thop==2.0.18
       - urllib3==2.6.3
-      - wcwidth==0.2.14
       - werkzeug==3.1.5
       - wrapt==1.14.2
-prefix: /home/littlecrabby/anaconda3/envs/cv
+prefix: /home/littlecrabby/miniconda3/envs/cv
